# niney-life-pickr

./: .gitignore  CHECKLIST_NEW_FIELD_ADDITION.md  CLAUDE.md  DOCUMENTATION-ENHANCEMENT-PHASE4-REPORT.md  DOCUMENTATION-QUALITY-PHASE5-REPORT.md  DOCUMENTATION-QUALITY-REPORT.md  LINK-VERIFICATION-REPORT.md  README.md  package-lock.json
.claude/skills/restaurant-feature-workflow/: SKILL.ko.md
apps/mobile/: .gitignore  App.tsx  README.md  app.json  babel.config.js  env.d.ts  jest.config.js  jest.setup.js  maestro.yaml  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/mobile/.maestro/: README.md  config.yaml  login.yaml  smoke.yaml
apps/mobile/__tests__/: App.test.tsx  HomeScreen.test.tsx
apps/mobile/android/: settings.gradle
apps/mobile/ios/: Podfile
apps/mobile/scripts/: maestro.js
apps/mobile/src/: types.d.ts
apps/shared/: index.ts  package-lock.json  package.json  tsconfig.json  vite-env.d.ts
apps/shared/components/: Button.tsx  InputField.tsx  JobCard.tsx  ProgressIndicator.tsx  index.ts
apps/shared/constants/: app.constants.ts  auth.constants.ts  index.ts  socket-config.ts  theme.constants.ts
apps/shared/contexts/: SocketContext.tsx  ThemeContext.tsx  index.ts
apps/shared/data/: SeoulMapDistricts.ts
apps/shared/hooks/: index.ts  useAuth.ts  useJobEventHandlers.ts  useJobRefresh.ts  useJobSocket.ts  useLogin.ts  useMenus.ts  useRankings.ts  useRestaurantList.ts  useRestaurantSearch.ts  useRestaurantStatistics.ts  useReviews.ts
apps/shared/services/: api.config.ts  api.config.web.ts  api.service.ts  index.ts  queueService.ts
apps/shared/types/: index.ts  socket-events.ts
apps/shared/utils/: alert.utils.ts  index.ts  job-completion-tracker.ts  jobFormatters.ts  jobHelpers.ts  registerJobSocketEvents.ts  socket-sequence-manager.ts  socket.utils.ts  storage.utils.ts
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/web/e2e/: login.spec.ts
apps/web/public/: config.yml  manifest.json
apps/web/scripts/: kill-dev.cjs
apps/web/src/: App.css  App.tsx  index.css
config/: README.md  base.example.yml  base.yml  production.yml  test.yml
docs/claude/00-core/: ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  PERFORMANCE.md  TROUBLESHOOTING.md
docs/claude/01-web/: WEB-HEADER-DRAWER.md  WEB-HOME.md  WEB-LAYOUT.md  (+8 more)
scripts/: verify-links.py  verify-links.sh
servers/friendly/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
servers/smart/: .gitignore  README.md  activate.bat  deactivate.bat  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
servers/smart/scripts/: dev.py  start.py
servers/smart/src/: __init__.py  app.py  main.py
servers/smart/src/api/: health.py  ml.py  recommendations.py
servers/smart/src/core/: __init__.py  config.py
servers/smart/tests/: __init__.py  conftest.py
servers/smart/tests/integration/: test_health.py  test_ml.py  test_recommendations.py
servers/smart/tests/unit/: test_config.py
(+315 files in other folders)
